# event_face_app

./: README.md  manage.py  pyproject.toml
src/: urls.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  models.py  serializers.py  urls.py  views.py
src/events/management/commands/: cleanup_events.py
src/events/migrations/: 0001_initial.py  0002_event_changed_at.py  0003_registration.py  0004_event_registration_deadline.py
src/sync/: client.py  models.py  services.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
src/transactional_outbox/: apps.py  models.py  services.py  tests.py
src/transactional_outbox/management/commands/: process_outbox.py
src/transactional_outbox/migrations/: 0001_initial.py
src/users/: serializers.py  services.py  urls.py  views.py
